ipc/ipdl/test/ipdl/error/multimanDupMgrsMgr.ipdl
//error: manager `multimanDupMgrsMgr' appears multiple times

include protocol multimanDupMgrs;

protocol multimanDupMgrsMgr {
    manages multimanDupMgrs;

child:
    async multimanDupMgrs();
    async __delete__();
};
